Fixed Sidebar Infomation Object structure

--- a/src/styles/componentsCustom.css
+++ b/src/styles/componentsCustom.css
@@ -8,6 +8,7 @@
     letter-spacing: .3px;
     color: #78828a;
     text-decoration: none;
+    font-weight: 500;
 }
 
 .main-sidebar .sidebar-menu li div.nav-link i {
