--- a/src/styles/componentsCustom.css
+++ b/src/styles/componentsCustom.css
@@ -44,3 +44,7 @@ body:not(.sidebar-mini) .main-sidebar .sidebar-menu > li.active > .nav-link:befo
     width: 4px;
     background-color: #6777ef;
 }
+
+.main-content{
+    padding-top: 40px;
+}
