--- a/src/styles/componentsCustom.css
+++ b/src/styles/componentsCustom.css
@@ -48,3 +48,7 @@ body:not(.sidebar-mini) .main-sidebar .sidebar-menu > li.active > .nav-link:befo
 .main-content{
     padding-top: 40px;
 }
+
+.card .card-header h4{
+    color:#6c757d;
+}
