--- a/src/styles/componentsCustom.css
+++ b/src/styles/componentsCustom.css
@@ -52,3 +52,12 @@ body:not(.sidebar-mini) .main-sidebar .sidebar-menu > li.active > .nav-link:befo
 .card .card-header h4{
     color:#6c757d;
 }
+
+table.table{
+    color:var(--secondary);
+}
+
+.table:not(.table-sm):not(.table-md):not(.dataTable) td,
+.table:not(.table-sm):not(.table-md):not(.dataTable) th{
+    height: 35px;
+}
