Select File Button move to Title Header

--- a/src/styles/componentsCustom.css
+++ b/src/styles/componentsCustom.css
@@ -65,3 +65,7 @@ table.table {
 .table:not(.table-sm):not(.table-md):not(.dataTable) th {
     height: 35px;
 }
+
+.section .section-header{
+    justify-content: space-between;
+}
